Updated with link to css demo

--- a/index.html
+++ b/index.html
@@ -4,8 +4,9 @@
     <title>Demo for CS150</title>
   </head>
   <body>
+    <a href="css_demo.html">Check out this CSS demo!</a>
     <h1>Welcome to the demo!</h1>
-    <p>This is a template for the web page that I will be devloping as a part of the class I am taking at <span>Westmont Collegte</span>!</p>
+    <p>This is a template for the web page that I will be devloping as a part of the class I am taking at <span>Westmont College</span>!</p>
     <h4>Josiah Swanson</h4>
   </body>
 </html>
