--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   </head>
   <body>
     <a href="css_demo.html">Check out this CSS demo!</a>
+    <a href="font_sample.html">Check out this font demo!</a>
     <h1>Welcome to the demo!</h1>
     <p>This is a template for the web page that I will be devloping as a part of the class I am taking at <span>Westmont College</span>!</p>
     <h4>Josiah Swanson</h4>
