--- a/font-sample.html
+++ b/font-sample.html
@@ -7,7 +7,7 @@
   </head>
   <body>
     <a href="css_demo.html">Check out this CSS demo!</a>
-    <a href="font_sample.html">Check out this font demo!</a>
+    <a href="font-sample.html">Check out this font demo!</a>
     <h1 style="font-family: 'Lobster', cursive">Ths is the Font demo!</h1>
     <p style="font-family: 'Roboto', sans-serif">How do you like the look of these <span>fonts</span>!</p>
     <h4 style="font-family: 'Roboto Mono', monospace">Josiah Swanson</h4>
