--- a/index.html
+++ b/index.html
@@ -4,8 +4,10 @@
     <title>Demo for CS150</title>
   </head>
   <body>
-    <a href="css_demo.html">Check out this CSS demo!</a>
-    <a href="font-sample.html">Check out this font demo!</a>
+    <ul>
+      <li><a href="css_demo.html">Check out this CSS demo!</a></li>
+      <li><a href="font-sample.html">Check out this font demo!</a></li>
+      <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
     <h1>Welcome to the demo!</h1>
     <p>This is a template for the web page that I will be devloping as a part of the class I am taking at <span>Westmont College</span>!</p>
     <h4>Josiah Swanson</h4>
