--- a/font-sample.html
+++ b/font-sample.html
@@ -6,8 +6,11 @@
     <title>Demo for CS150</title>
   </head>
   <body>
-    <a href="css_demo.html">Check out this CSS demo!</a>
-    <a href="font-sample.html">Check out this font demo!</a>
+    <ul>
+      <li><a href="css_demo.html">Check out this CSS demo!</a></li>
+      <li><a href="font-sample.html">Check out this font demo!</a></li>
+      <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
+    </ul>
     <h1 style="font-family: 'Lobster', cursive">Ths is the Font demo!</h1>
     <p style="font-family: 'Roboto', sans-serif">How do you like the look of these <span>fonts</span>!</p>
     <h4 style="font-family: 'Roboto Mono', monospace">Josiah Swanson</h4>
