Updated with links

--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
   </head>
   <body>
+    <ul>
+      <li><a href="css_demo.html">Check out this CSS demo!</a></li>
+      <li><a href="font-sample.html">Check out this font demo!</a></li>
+      <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
+    </ul>
     <h1>This is the day that the LORD has made...</h1>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
