Update with image

--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -6,6 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <style>
+      #repsonsiveimage {max-width:210px;}
+    </style>
   </head>
   <body>
     <ul>
@@ -13,6 +16,7 @@
       <li><a href="font-sample.html">Check out this font demo!</a></li>
       <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
     </ul>
+    <img src ="https://josiahswanson.com/img/005.jpg" id="responsiveimage">
     <h1>This is the day that the LORD has made...</h1>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
