--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -8,6 +8,19 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <style>
       #repsonsiveimage {max-width:210px;}
+      main {
+        background-color: #FEF;
+        grid-auto-flow: column;
+        align-content: center;
+        align-items: stretch;
+        justify-content: center;
+        display: grid;
+        grid-template-columns: 250px 250px;
+        grid-template-rows: repeat(3, 450px);
+        grid-gap: 20px;
+        margin-top: 44px;
+        grid-auto-rows: 500px;
+      }
     </style>
   </head>
   <body>
@@ -17,7 +30,12 @@
       <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
     </ul>
     <img src ="https://josiahswanson.com/img/005.jpg" id="responsiveimage">
-    <h1>This is the day that the LORD has made...</h1>
+    <main>
+    </main>
+    <div><p>This is the day that the LORD has made...</p></div>
+    <div><p>This is the day that the LORD has made...</p></div>
+    <div><p>This is the day that the LORD has made...</p></div>
+    <div><p>This is the day that the LORD has made...</p></div>
 
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
