--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <title>Bootstrap Sample!</title>
     <!-- Required meta tags -->
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -21,6 +22,10 @@
         margin-top: 44px;
         grid-auto-rows: 500px;
       }
+      .container {
+        min-width: 500px;
+        margin: auto;
+      }
     </style>
   </head>
   <body>
@@ -29,14 +34,15 @@
       <li><a href="font-sample.html">Check out this font demo!</a></li>
       <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
     </ul>
-    <img src ="https://josiahswanson.com/img/005.jpg" id="responsiveimage">
-    <main>
+    <img src ="https://josiahswanson.com/img/005.jpg" alt="palm tree" id="responsiveimage">
+    <div class="container">
+      <main>
+      <div><p>This is the day that the LORD has made...</p></div>
+      <div><p>This is the day that the LORD has made...</p></div>
+      <div><p>This is the day that the LORD has made...</p></div>
+      <div><p>This is the day that the LORD has made...</p></div>
     </main>
-    <div><p>This is the day that the LORD has made...</p></div>
-    <div><p>This is the day that the LORD has made...</p></div>
-    <div><p>This is the day that the LORD has made...</p></div>
-    <div><p>This is the day that the LORD has made...</p></div>
-
+    </div>
     <!-- jQuery first, then Tether, then Bootstrap JS. -->
     <script src="https://code.jquery.com/jquery-3.1.1.slim.min.js" integrity="sha384-A7FZj7v+d/sdmMqp/nOQwliLvUsJfDHW+k9Omg/a/EheAdgtzNs3hpfag6Ed950n" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/tether/1.4.0/js/tether.min.js" integrity="sha384-DztdAPBWPRXSA/3eYEEUWrWCy7G5KFbe8fFjk5JAIxUYHKkDx6Qin1DkWx51bBrb" crossorigin="anonymous"></script>
