--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -10,17 +10,17 @@
     <style>
       #repsonsiveimage {max-width:210px;}
       main {
-        background-color: #FEF;
-        grid-auto-flow: column;
-        align-content: center;
-        align-items: stretch;
-        justify-content: center;
         display: grid;
-        grid-template-columns: 250px 250px;
-        grid-template-rows: repeat(3, 450px);
-        grid-gap: 20px;
-        margin-top: 44px;
-        grid-auto-rows: 500px;
+        grid-template-columns: auto auto auto auto;
+        grid-template-rows: 100px 300px;
+        grid-gap: 10px;
+        background-color: #EFF;
+        padding: 10px;
+      }
+      main div {
+        text-align: center;
+        padding: 20px 0;
+        font-size: 30px;
       }
       .container {
         min-width: 500px;
@@ -29,13 +29,13 @@
     </style>
   </head>
   <body>
+    <div class="container">
     <ul>
       <li><a href="css_demo.html">Check out this CSS demo!</a></li>
       <li><a href="font-sample.html">Check out this font demo!</a></li>
       <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
     </ul>
     <img src ="https://josiahswanson.com/img/005.jpg" alt="palm tree" id="responsiveimage">
-    <div class="container">
       <main>
       <div><p>This is the day that the LORD has made...</p></div>
       <div><p>This is the day that the LORD has made...</p></div>
