--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -8,8 +8,35 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
     <style>
+      html {
+        font-family: sans-serif;
+        -ms-text-size-adjust: 100%;
+        -webkit-text-size-adjust: 100%
+      }
+      article, aside, details, figcaption, figure, footer, header, hgroup, main, menu, nav, section, summary {
+        display: block
+      }
       body {
         max-width: 700px;
+        margin: 0;
+        padding: 0;
+      }
+      img {
+        margin: 0;
+	      max-width: 100%;
+	      padding: 0;
+	      vertical-align: middle;
+      }
+      p {
+        color: #180D0E;
+	      font-size: 14px;
+      	font-weight: 400;
+	      letter-spacing: 0.03em;
+	      line-height: 30px;
+	      margin: 8px 0;
+	      padding: 0 8%;
+        text-decoration: none;
+      	width: 84%;
       }
       #repsonsiveimage {
         width: 80%;
