--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -46,9 +46,14 @@
         grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
         grid-template-rows: repeat(6, 200px);
         grid-gap: 10px;
-        gird-auto-flow: dense;
+        grid-auto-flow: dense;
         background-color: #EFF;
         padding: 10px;
+      }
+      main div {
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
       }
       main div:nth-child(4n) {
         grid-column: span 2;
