--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -76,11 +76,11 @@
       <li><a href="font-sample.html">Check out this font demo!</a></li>
       <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
     </ul>
-    <img src ="https://josiahswanson.com/img/005.jpg" alt="palm tree" id="responsiveimage">
+    <img src ="https://josiahswanson.com/img/580413_PS_PAW_BILL_SUIT-scaled.jpg" alt="palm tree" id="responsiveimage">
       <main>
       <div><p>This is the day that the LORD has made...</p></div>
       <div><p>Yup, that's right...</p></div>
-      <div><img src="https://josiahswanson.com/img/009.jpg" alt="An image from my webstite"></div>
+      <div><img src="https://cdn.theatlantic.com/static/mt/assets/science/cat_caviar.jpg" alt="gangster cat"></div>
       <div><p>How Cool!</p></div>
       <div><p>Not much to it,honestly!</p></div>
     </main>
