--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -18,7 +18,7 @@
       }
       body {
         max-width: 700px;
-        margin: 0;
+        margin: 0 auto;
         padding: 0;
       }
       img {
@@ -39,7 +39,8 @@
       	width: 84%;
       }
       #repsonsiveimage {
-        width: 80%;
+        width: 20%;
+	margin: 0 auto;
       }     
       main {
         display: grid;
@@ -77,7 +78,7 @@
       <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
     </ul>
     <img src ="https://josiahswanson.com/img/580413_PS_PAW_BILL_SUIT-scaled.jpg" alt="palm tree" id="responsiveimage">
-      <main>
+    <main>
       <div><p>This is the day that the LORD has made...</p></div>
       <div><p>Yup, that's right...</p></div>
       <div><img src="https://cdn.theatlantic.com/static/mt/assets/science/cat_caviar.jpg" alt="gangster cat"></div>
