--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -80,7 +80,7 @@
             width: 84%;
         }
 
-        #repsonsiveimage {
+        #responsiveimage {
             width: 20%;
             margin: 0 auto;
         }
