--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -141,7 +141,8 @@
                 <p>How Cool!</p>
             </div>
             <div>
-                <p>Not much to it,honestly!</p>
+                <img src="https://st2.depositphotos.com/1594920/8612/i/600/depositphotos_86121910-stock-photo-british-shorthair-wearing-glasses-and.jpg" alt="What a silly kitty!">
+                <p>What a silly Kitty!</p>
             </div>
         </main>
     </div>
