--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -45,17 +45,17 @@
             width: 100%;
         }
 
-        header nav {
+        header ul {
             padding: 20px 0 0 0;
         }
 
-        nav ul {
+        ul {
             list-style: none;
             margin: 0;
             padding: 0;
         }
 
-        nav li {
+        li {
             display: inline-block;
             margin: 0 10px;
             padding: 0;
@@ -122,6 +122,7 @@
 
 <body>
     <div class="container">
+        <header>
         <ul>
             <li><a href="css_demo.html">Check out this CSS demo!</a></li>
             <li><a href="font-sample.html">Check out this font demo!</a></li>
@@ -129,6 +130,7 @@
         </ul>
         <img src="https://josiahswanson.com/img/580413_PS_PAW_BILL_SUIT-scaled.jpg" alt="palm tree"
             id="responsiveimage">
+        </header>
         <main>
             <div>
                 <p>This is the day that the LORD has made...</p>
