--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -82,8 +82,9 @@
 
         #responsiveimage {
             width: 20%;
-            padding: 0 40%;
-            margin: 0 auto;
+            padding: 0;
+            float: center;
+            margin: 0 40%;
         }
 
         main {
