--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -125,9 +125,9 @@
     <div class="container">
         <header>
         <ul>
-            <li><a href="css_demo.html">Check out this CSS demo!</a></li>
-            <li><a href="font-sample.html">Check out this font demo!</a></li>
-            <li><a href="bootstrap-sample.html">Check out this bootstrap demo!</a></li>
+            <li><a href="css_demo.html">CSS demo!</a></li>
+            <li><a href="font-sample.html">Font demo!</a></li>
+            <li><a href="bootstrap-sample.html">Bootstrap demo!</a></li>
         </ul>
         <img src="https://josiahswanson.com/img/580413_PS_PAW_BILL_SUIT-scaled.jpg" alt="palm tree"
             id="responsiveimage">
