--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -38,7 +38,7 @@
             padding: 0;
         }
 
-        nav {
+        header {
             margin: 0;
             padding: 0;
             text-align: center;
