--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -122,6 +122,9 @@
 </head>
 
 <body>
+    <div class="alert alert-success" role="alert">
+      <strong>This is a button!</strong>
+    </div>
     <div class="container">
         <header>
         <ul>
