--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -103,6 +103,10 @@
             background-color: #EFF;
             object-fit: cover;
         }
+        
+        main div img {
+            max-height: 100%;
+        }
 
         main div:nth-child(4n) {
             grid-column: span 2;
