--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -136,9 +136,9 @@
         <img src="https://josiahswanson.com/img/580413_PS_PAW_BILL_SUIT-scaled.jpg" alt="palm tree"
             id="responsiveimage">
         </header>
-        <div class="alert alert-success" role="alert">
-          <strong>This is a button!</strong>
-        </div>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
         <main>
             <div>
                 <p>This is the day that the LORD has made...</p>
