--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -106,6 +106,9 @@
         
         main div img {
             max-height: 100%;
+            float: center;
+            margin: 0 auto;
+            padding: 0;
         }
 
         main div:nth-child(4n) {
