--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -17,6 +17,7 @@
         }
 
         article,
+        button,
         aside,
         details,
         figcaption,
@@ -38,7 +39,7 @@
             padding: 0;
         }
 
-        header {
+        header, button {
             margin: 0;
             padding: 0;
             text-align: center;
@@ -136,12 +137,12 @@
             <li><a href="font-sample.html">Font demo!</a></li>
             <li><a href="bootstrap-sample.html">Bootstrap demo!</a></li>
         </ul>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">I am a button.</span>
+        </button>
         <img src="https://josiahswanson.com/img/580413_PS_PAW_BILL_SUIT-scaled.jpg" alt="palm tree"
             id="responsiveimage">
         </header>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
         <main>
             <div>
                 <p>This is the day that the LORD has made...</p>
