--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -41,7 +41,7 @@
 
         header, button {
             margin: 0;
-            padding: 0;
+            padding: 20px 0;
             text-align: center;
             width: 100%;
         }
@@ -105,9 +105,9 @@
             object-fit: cover;
         }
         
-        main div img {
+        main div img {            
             max-height: 100%;
-            float: center;
+            display: block;
             margin: 0 auto;
             padding: 0;
         }
@@ -137,12 +137,12 @@
             <li><a href="font-sample.html">Font demo!</a></li>
             <li><a href="bootstrap-sample.html">Bootstrap demo!</a></li>
         </ul>
-        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
-          <span aria-hidden="true">I am a button.</span>
-        </button>
         <img src="https://josiahswanson.com/img/580413_PS_PAW_BILL_SUIT-scaled.jpg" alt="palm tree"
             id="responsiveimage">
         </header>
+        <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+          <span aria-hidden="true">I am a button. Press me and see what happens.</span>
+        </button>
         <main>
             <div>
                 <p>This is the day that the LORD has made...</p>
