--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -101,6 +101,7 @@
             width: 100%;
             height: 100%;
             padding: 20px 0;
+            text-align: center;
             background-color: #EFF;
             object-fit: cover;
         }
