--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -106,6 +106,11 @@
             object-fit: cover;
         }
         
+        main div p {
+            padding: 0;
+            width: 100%;
+        }
+        
         main div img {            
             max-height: 100%;
             display: block;
