--- a/bootstrap-sample.html
+++ b/bootstrap-sample.html
@@ -91,7 +91,7 @@
         main {
             display: grid;
             grid-template-columns: repeat(auto-fit, minmax(160px, 1fr));
-            grid-template-rows: repeat(5, 200px);
+            grid-template-rows: auto;
             grid-gap: 10px;
             grid-auto-flow: dense;
             padding: 10px;
